@@ -1,3 +1,9 @@
+2014-01-25  TANAKA Takuji  <KXD02663@nifty.ne.jp>
+
+	* ptexenc.c: Return replacement character U+FFFD
+	for illegal surrogate pair in console (keyboad) input
+	in upTeX on Windows.
+
 2014-01-03  TANAKA Takuji  <KXD02663@nifty.ne.jp>
 
 	* ptexenc.c, ptexenc/unicode.h: Enable console (keyboad) input
